--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <include layout="@layout/tool_bar" />
+    <include layout="@layout/include_tool_bar" />
 
     <ScrollView
         android:id="@+id/login_form"
@@ -38,5 +38,5 @@
         </LinearLayout>
     </ScrollView>
 
-    <include layout="@layout/progress" />
+    <include layout="@layout/include_progress" />
 </LinearLayout>
