--- a/app/src/main/res/values/strings_activity_main.xml
+++ b/app/src/main/res/values/strings_activity_main.xml
@@ -3,4 +3,10 @@
     <string name="prompt_press_back_again_to_exit">再次按返回键以退出</string>
     <string name="open_drawer_menu">打开抽屉菜单</string>
     <string name="close_drawer_menu">关闭抽屉菜单</string>
+    
+    <string name="sales_statistics">销售统计</string>
+
+    <string-array name="drawer_items">
+        <item>@string/sales_statistics</item>
+    </string-array>
 </resources>
