--- a/app/src/main/res/layout/fragment_month_sales.xml
+++ b/app/src/main/res/layout/fragment_month_sales.xml
@@ -10,13 +10,13 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/start_time_button"
+            android:id="@+id/start_date_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/end_time_button"
+            android:id="@+id/end_date_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
