--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,11 @@
         <item name="android:padding">@dimen/root_margin</item>
     </style>
 
+    <style name="Root.HasList">
+        <item name="android:paddingTop">@dimen/root_vertical_margin</item>
+        <item name="android:paddingBottom">@dimen/root_vertical_margin</item>
+    </style>
+
     <style name="RaisedButton" parent="android:TextAppearance.Small">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">bold</item>
