--- a/app/src/main/res/layout/fragment_day_sales.xml
+++ b/app/src/main/res/layout/fragment_day_sales.xml
@@ -33,10 +33,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ListView
-                android:id="@+id/day_sales_list"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"/>
         </HorizontalScrollView>
     </LinearLayout>
 
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_launcher"
+        android:src="@drawable/abc_ic_commit_search_api_mtrl_alpha"
         fab:fab_colorNormal="@color/primary"
         fab:fab_colorPressed="@color/primary_pressed"
         fab:fab_colorRipple="@color/ripple" />
