--- a/app/src/main/res/layout/fragment_day_sales2.xml
+++ b/app/src/main/res/layout/fragment_day_sales2.xml
@@ -37,15 +37,27 @@
                     android:layout_weight="1" />
             </LinearLayout>
 
-            <HorizontalScrollView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <ListView
-                    android:id="@+id/day_sales_list"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/date_list"
+                    android:layout_width="100dp"
+                    android:scrollbars="none"
                     android:layout_height="match_parent" />
-            </HorizontalScrollView>
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ListView
+                        android:id="@+id/day_sales_list"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent" />
+                </HorizontalScrollView>
+            </LinearLayout>
         </LinearLayout>
 
         <com.melnykov.fab.FloatingActionButton
@@ -54,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_margin="16dp"
-            android:src="@drawable/ic_launcher"
+            android:src="@drawable/abc_ic_search_api_mtrl_alpha"
             fab:fab_colorNormal="@color/primary"
             fab:fab_colorPressed="@color/primary_pressed"
             fab:fab_colorRipple="@color/ripple" />
