--- a/app/src/main/res/layout/include_full_screen_progress.xml
+++ b/app/src/main/res/layout/include_full_screen_progress.xml
@@ -2,6 +2,7 @@
 <FrameLayout
     android:id="@+id/progress"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:visibility="gone"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
