--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,13 @@
         <item name="android:paddingBottom">@dimen/root_vertical_margin</item>
     </style>
 
+    <style name="Root.ListItem">
+        <item name="android:paddingLeft">@dimen/root_horizontal_margin</item>
+        <item name="android:paddingRight">@dimen/root_horizontal_margin</item>
+        <item name="android:minHeight">?android:listPreferredItemHeight</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
     <style name="RaisedButton" parent="android:TextAppearance.Small">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">bold</item>
