--- a/app/src/main/res/layout/fragment_day_sales2.xml
+++ b/app/src/main/res/layout/fragment_day_sales2.xml
@@ -7,12 +7,11 @@
 
     <FrameLayout
         android:id="@+id/content_root"
-        style="@style/Root.HasList"
+        style="@style/Root"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:fab="http://schemas.android.com/tools">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -37,27 +36,49 @@
                     android:layout_weight="1" />
             </LinearLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="match_parent">
 
-                <ListView
-                    android:id="@+id/date_list"
+                <LinearLayout
+                    android:id="@+id/date_column"
                     android:layout_width="100dp"
-                    android:scrollbars="none"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/SheetBase.Header"
+                        android:text="@string/date_header" />
+
+                    <com.zsxj.datareport2.ui.widget.ScrollDisabledListView
+                        android:id="@+id/date_list"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:scrollbars="none" />
+                </LinearLayout>
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_alignTop="@id/date_column"
+                    android:layout_toRightOf="@id/date_column">
 
-                    <ListView
-                        android:id="@+id/day_sales_list"
+                    <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <include layout="@layout/include_headers" />
+
+                        <ListView
+                            android:id="@+id/day_sales_list"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent" />
+
+                    </LinearLayout>
+
                 </HorizontalScrollView>
-            </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
 
         <com.melnykov.fab.FloatingActionButton
