--- a/app/src/main/res/layout/include_cell.xml
+++ b/app/src/main/res/layout/include_cell.xml
@@ -1,7 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:minHeight="?android:listPreferredItemHeight"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal" />
+<TextView style="@style/SheetBase" />
