--- a/app/src/main/res/layout/fragment_day_sales2.xml
+++ b/app/src/main/res/layout/fragment_day_sales2.xml
@@ -3,8 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical">
 
-    <include layout="@layout/include_full_screen_progress" />
-
     <FrameLayout
         android:id="@+id/content_root"
         style="@style/Root"
@@ -92,5 +90,17 @@
             fab:fab_colorPressed="@color/primary_pressed"
             fab:fab_colorRipple="@color/ripple" />
 
+
+        <FrameLayout
+            android:id="@+id/progress_on_top"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+        </FrameLayout>
     </FrameLayout>
 </LinearLayout>
