--- a/app/src/main/res/layout/include_headers.xml
+++ b/app/src/main/res/layout/include_headers.xml
@@ -6,7 +6,7 @@
 
     <TextView
         style="@style/SheetBase.Header"
-        android:text="@string/shop_header" />
+        android:text="@string/shop" />
 
     <TextView
         style="@style/SheetBase.Header"
@@ -14,7 +14,6 @@
 
     <TextView
         style="@style/SheetBase.Header"
-
         android:text="@string/new_trades_header" />
 
     <TextView
@@ -24,6 +23,10 @@
     <TextView
         style="@style/SheetBase.Header"
         android:text="@string/check_trades_header" />
+
+    <TextView
+        style="@style/SheetBase.Header"
+        android:text="@string/check_trades_amount_header" />
 
     <TextView
         style="@style/SheetBase.Header"
@@ -65,5 +68,4 @@
         style="@style/SheetBase.Header"
         android:text="@string/package_cost_header" />
 
-    <TextView style="@style/SheetBase.Header" />
 </LinearLayout>
