--- a/app/src/main/res/menu/menu_day_sales.xml
+++ b/app/src/main/res/menu/menu_day_sales.xml
@@ -3,7 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_select_shop"
+        android:title="@string/action_select_shop"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/action_select_warehouses"
         app:showAsAction="ifRoom"
-        android:title="仓库" />
+        android:title="@string/action_select_warehouse" />
 </menu>
