--- a/app/src/main/res/layout/fragment_month_sales.xml
+++ b/app/src/main/res/layout/fragment_month_sales.xml
@@ -1,25 +1,61 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<FrameLayout
+    android:id="@+id/content_root"
+    style="@style/Root"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/start_date_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+        <include layout="@layout/include_date_button_bar" />
 
-        <Button
-            android:id="@+id/end_date_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/date_column"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/SheetBase.Header"
+                    android:text="@string/date_header" />
+
+                <com.zsxj.datareport2.ui.widget.ScrollDisabledListView
+                    android:id="@+id/date_list"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none" />
+            </LinearLayout>
+
+            <HorizontalScrollView
+                android:overScrollMode="never"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/include_headers" />
+
+                    <ListView
+                        android:overScrollMode="never"
+                        android:id="@+id/day_sales_list"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+            </HorizontalScrollView>
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+    <include layout="@layout/include_fab" />
+
+    <include layout="@layout/include_progress_on_top" />
+</FrameLayout>
+
