--- a/app/src/main/res/layout/include_progress_on_top.xml
+++ b/app/src/main/res/layout/include_progress_on_top.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:id="@+id/progress"
+    android:id="@+id/progress_on_top"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:visibility="gone"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clickable="true">
 
     <ProgressBar
-        style="?android:progressBarStyleLarge"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 </FrameLayout>
-
