--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="drawer_item_selected_background">#FEEE</color>
     <color name="white">#FFFFFF</color>
     <color name="drawer_item_tint_color">#FF333333</color>
+
+    <color name="ripple">#F06292</color>
+    <color name="accent">#E91E63</color>
+    <color name="accent_pressed">#C2185B</color>
 </resources>
